removed article3 experiment fixed broken css format

--- a/zahrada.css
+++ b/zahrada.css
@@ -95,9 +95,3 @@ ul.navbar {
   color: var(--orange-dim);
   border: solid 2px;
 }
-
-.article3iframe {
-  height: 400px;
-  width: 1200px;
-  border: dashed 2px;
-}
